5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3986/executions/1573_1326.log
== TEST (2019-03-11 15:09:06) 
-- CODE:
print ("40") print ("35") print ("85")
-- ERROR:
File "XXXX", line 1
    print ("40") print ("35") print ("85")
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:09:09) 
-- CODE:
print ("40") print ("35") print ("85")
-- EXECUTION TIME:
0.136708
-- ERROR:
  File "/home/codebench/codes/1573/1326/main.py", line 1
    print ("40") print ("35") print ("85")
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:10:30) 
-- CODE:
print (75)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:10:33) 
-- CODE:
print (75)
-- EXECUTION TIME:
0.205941
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
